--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
       </article>
 
       <article class="stat card">
-        <div class="stat__label">Total de Produtos</div>
+        <div class="stat__label">Total em Estoque</div>
         <div class="stat__value">{{ produtos|sum(attribute='quantidade') }}</div>
       </article>
     </section>
